[gd_scene load_steps=7 format=3 uid="uid://b66c0htg0a03m"]

[ext_resource type="Script" uid="uid://hnxcn67ks0kc" path="res://player_controller.gd" id="1_3vyb7"]
[ext_resource type="StyleBox" uid="uid://6cwu8f41cl87" path="res://assets/styleboxes/defult.tres" id="2_g2els"]
[ext_resource type="Script" uid="uid://bo42a8xmjo7ew" path="res://assets/scripts/interaction_ui.gd" id="2_qhqgy"]

[sub_resource type="LabelSettings" id="LabelSettings_qhqgy"]
font_size = 36
font_color = Color(0.315753, 0.249403, 0.659962, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qlg0r"]
bg_color = Color(0.619608, 0.666667, 0.827451, 1)
border_width_left = 66
border_width_top = 66
border_width_right = 66
border_width_bottom = 66
border_color = Color(0.423529, 0.384314, 0.611765, 1)
border_blend = true
corner_radius_top_left = 66
corner_radius_top_right = 66
corner_radius_bottom_right = 66
corner_radius_bottom_left = 66

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qhqgy"]
radius = 0.0882796
height = 0.387205

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_3vyb7")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="InteractionRay" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2)

[node name="hold_item" type="Sprite3D" parent="Camera3D"]
transform = Transform3D(0.455, 0, 0, 0, 0.455, 0, 0, 0, 0.455, 0.442288, -0.103149, -0.719563)

[node name="interaction ui" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="interaction ui"]
visible = false
layout_mode = 3
anchor_left = 0.228
anchor_top = 0.785
anchor_right = 0.707
anchor_bottom = 0.954
offset_left = -108.656
offset_top = -40.68
offset_right = 96.536
offset_bottom = -0.192017
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_qhqgy")

[node name="Panel" type="Panel" parent="interaction ui/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.032
anchor_top = 0.36
anchor_right = 1.032
anchor_bottom = 1.0
offset_left = -0.224001
offset_right = -0.22406
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_g2els")

[node name="Label" type="Label" parent="interaction ui/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.97
anchor_bottom = 0.932
offset_left = 29.0
offset_top = 7.0
offset_right = -8.35004
offset_bottom = 3.75202
label_settings = SubResource("LabelSettings_qhqgy")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control2" type="Control" parent="interaction ui"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="LineEdit" type="LineEdit" parent="interaction ui/Control2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -356.0
offset_top = -175.0
offset_right = 1192.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.46, 0.46)
theme_override_font_sizes/font_size = 146
theme_override_styles/normal = SubResource("StyleBoxFlat_qlg0r")
placeholder_text = "ers to close"
alignment = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qhqgy")
